--- a/src/App.scss
+++ b/src/App.scss
@@ -10,15 +10,15 @@ $bootstrap-xl: 1200px;
 .navigation {
   background: rgba(196, 196, 196, 0.7);
   font-family: 'Raleway', sans-serif;
-  font-size: 1.4rem;
-  font-weight: 500;
+  font-size: 1.35rem;
+  font-weight: 650;
   padding: 0px 0px;
 
   .brandText {
     margin-left: 20vw;
     padding-bottom: 10px;
     font-size: 2rem;
-    font-weight: 300;
+    font-weight: 400;
     font-family: 'Playfair Display', serif;
     color:#404040 !important;
 
@@ -26,6 +26,7 @@ $bootstrap-xl: 1200px;
 
   .nav-link {
     color:#404040 !important;
+    margin: 0vw 0.5vw;
 
     &:hover {
       opacity: 0.6;
@@ -33,7 +34,7 @@ $bootstrap-xl: 1200px;
   }
 
   #responsive-navbar-nav {
-    margin-right: 20vw;
+    margin-right: 19.5vw;
   }
 
   &:hover {
@@ -42,3 +43,77 @@ $bootstrap-xl: 1200px;
   }
 }
 
+#fancyBtn {
+  position:absolute;
+  transform:translate(-50%,-50%);
+  width:300px;
+  height:60px;
+  text-align:center;
+  line-height:60px;
+  text-decoration:none;
+  margin-top:15px; 
+  border-radius: 10px;
+
+  &:hover {
+    svg rect {
+      stroke: white;
+      stroke-dasharray:360 0;
+      stroke-dashoffset:0;
+      fill: white;
+      opacity: 0.4;
+      cursor:pointer;
+    } 
+  }
+
+  span {
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    text-decoration:none; 
+    font-size:1.3rem;
+    font-weight:700;
+
+    &:hover {
+      color:white;
+      text-decoration:none; 
+    }
+  }
+
+  svg, svg rect {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    fill:transparent;
+    border-radius: 10px;
+  } 
+
+  svg rect {
+    stroke: white;
+    stroke-width:8;
+    transition: 1s;
+    stroke-dasharray:100 260;
+    stroke-linecap: round;
+    stroke-dashoffset:400;
+  } 
+}
+
+.hero {
+  height: 100vh;
+  margin-top: -63px;
+  margin-bottom: 0px;
+  border-radius:0px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  h2 {
+    margin-top: 30vh;
+    margin-bottom: 8vh;
+    font-size: 5rem;
+    font-weight: 600;
+    font-family: 'Playfair Display', serif;
+    color:white;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
