--- a/src/App.scss
+++ b/src/App.scss
@@ -101,8 +101,6 @@ $bootstrap-xl: 1200px;
 .hero {
   height: 100vh;
   margin-top: -63px;
-  margin-bottom: 0px;
-  border-radius:0px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -115,5 +113,36 @@ $bootstrap-xl: 1200px;
     font-family: 'Playfair Display', serif;
     color:white;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.hero, .hero2, .hero3 {
+  border-radius: 0px;
+  margin-bottom: 0px;
+
+  img {
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    height: auto;
+    object-fit: cover;
+    object-position: bottom;
+  }
+}
+
+.hero2 {
+  background-color: #F77B55;
+  padding: 32px;
+
+  img {
+    width: 100%;
+  }
+}
+
+.hero3 {
+  background-color: #FDCA5C;
+  padding: 32px 32px 138px;
+
+  img {
+    width: 50%;
   }
 }
