--- a/src/App.scss
+++ b/src/App.scss
@@ -150,12 +150,22 @@ $bootstrap-xl: 1200px;
 
   h4 {
     margin-top: 10vh;
-    margin-bottom: 90vh;
+    margin-bottom: 7vh;
     font-size: 3rem;
     font-weight: 600;
     font-family: 'Playfair Display', serif;
     color:white;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25)
+  }
+
+  h5 {
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-size:1.4rem;
+    line-height: 1.8rem;
+    font-weight:700;
+    margin: 0vw 7vw;
+
   }
 
   img {
@@ -193,6 +203,33 @@ $bootstrap-xl: 1200px;
 
     p {
       text-align: justify;
+    }
+  }
+
+  .olympiad {
+    padding: 0px 5vw 0px;
+
+    .carousel-control-prev-icon {
+      width:40px;
+      height:40px;
+      margin-right:2vw;
+    }
+
+    .carousel-control-next-icon {
+      width:40px;
+      height:40px;
+      margin-left:2vw;
+    }
+
+    .carousel-indicators li {
+      width: 15px;
+      height: 15px;
+      border-radius: 100%;
+    }
+    
+    .carousel-item {
+      padding: 0px 5vw 0px;
+      
     }
   }
   
@@ -268,6 +305,12 @@ $bootstrap-xl: 1200px;
       padding-top:5vh;
     }
 
+    .olympiad {
+      img {
+        height: 85vh;
+      }
+    }
+
     .about {
       padding:20px;
 
@@ -281,8 +324,42 @@ $bootstrap-xl: 1200px;
     .testimonials {
       height: 55vh;
     }
+
+    .olympiad {
+      img {
+        height: 90vh;
+      }
+    }
+  }
+
+  @media (max-width: $bootstrap-sm) {
+    h4 {
+      margin-top: 5vh;
+    }
+
+    h5 {
+      margin: 0vw 0vw 0vw;
+    }
+    
+    .olympiad { 
+      padding: 0px 10px 0px;
+
+      .carousel-control-prev-icon, .carousel-control-next-icon  {
+        display:none;
+      }
+
+      .carousel-item {
+        padding: 0px;
+      }
+
+      img {
+        height: 35vh;
+      } 
+    }
   }
 }
+
+
 
 .footer {
   background-color: rgba(101,157,189, 0.65);
