--- a/src/App.scss
+++ b/src/App.scss
@@ -14,19 +14,16 @@ $bootstrap-xl: 1200px;
   font-weight: 500;
   padding: 0px 0px;
 
-  .nav-link {
+  a {
     color:white !important;
     margin: 0vw 0.5vw;
+    padding: 0.7vh 0vh;
     font-weight: 600;
+    text-decoration:none;
+    cursor: pointer;
 
     &:hover {
       opacity: 0.6;
-    }
-
-    .active, a {
-      color:white !important;
-      font-weight: 600;
-      text-decoration:none;
     }
   }
   
@@ -50,10 +47,10 @@ $bootstrap-xl: 1200px;
     left: 0;
   }
 
-  .navbar-toggler{
+  button {
     border: none;
     z-index: 2;
-    padding: 0px;
+    padding: 14px 14px 0px;
     margin: 4px;
   }
 }
@@ -369,5 +366,51 @@ $bootstrap-xl: 1200px;
   p {
     color:white;
     margin:0px;
+  }
+}
+
+.image-card {
+  width: 17vw !important;
+  height: 17vw !important;
+  object-fit: cover !important;
+  margin: 15px 15px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.works {
+  z-index: 1030;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+
+  .carousel-control-prev-icon {
+    width:40px;
+    height:40px;
+    margin-right:2vw;
+  }
+
+  .carousel-control-next-icon {
+    width:40px;
+    height:40px;
+    margin-left:2vw;
+  }
+
+  .carousel-indicators li {
+    width: 15px;
+    height: 15px;
+    border-radius: 100%;
+  }
+  
+  img {
+  margin-top: 6vh;
+  height: 82vh ;
+  width: auto;
+  object-fit: cover;
   }
 }
