--- a/src/App.scss
+++ b/src/App.scss
@@ -129,7 +129,6 @@ $bootstrap-xl: 1200px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   
-
   h2 {
     margin-top: 5vh;
     margin-bottom: 10vh;
@@ -288,6 +287,52 @@ $bootstrap-xl: 1200px;
     background-image: linear-gradient(to right, white, transparent);
   }
 
+  .image-card {
+    width: 17vw;
+    height: 17vw;
+    object-fit: cover;
+    margin: 15px 15px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .works {
+    z-index: 1030;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+
+    .carousel-control-prev-icon {
+      width:40px;
+      height:40px;
+      margin-right:2vw;
+    }
+
+    .carousel-control-next-icon {
+      width:40px;
+      height:40px;
+      margin-left:2vw;
+    }
+
+    .carousel-indicators li {
+      width: 15px;
+      height: 15px;
+      border-radius: 100%;
+    }
+    
+    img {
+    margin-top: 6vh;
+    height: 82vh ;
+    width: auto;
+    object-fit: cover;
+    }
+  }
+
   @media (min-width: 1400px) {
     p {
       font-size: 1.3rem;
@@ -337,9 +382,43 @@ $bootstrap-xl: 1200px;
     h5 {
       margin: 0vw 0vw 0vw;
     }
+
+    .about {
+      padding:0px;
+
+      p {
+        font-size: 1.2rem;
+        margin: 20px 0px 0px;
+      }
+
+      a {
+        font-size: 1.2rem;
+      }
+    }
+
+    .testimonials {
+      height: 60vh;
+      padding-top: 0px;
+      margin-left:-20px;
+      margin-right: -20px;
+      margin-bottom:20px;
+      
+      p {
+        font-size: 1.2rem;
+        margin: 0px 0px 20px;
+      }
+
+      .carousel-item {
+        padding-bottom: 0px;
+      }
+
+      .carousel-control-prev-icon, .carousel-control-next-icon  {
+        display:none;
+      }
+    }
     
     .olympiad { 
-      padding: 0px 10px 0px;
+      padding: 0px;
 
       .carousel-control-prev-icon, .carousel-control-next-icon  {
         display:none;
@@ -353,10 +432,32 @@ $bootstrap-xl: 1200px;
         height: 35vh;
       } 
     }
+
+    .image-card {
+      width: 100%;
+      height: 35vh;
+      margin: 0px 0px 15px;
+      
+    
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    .works {     
+      img {
+      width: 100%;
+      }
+    }
+  }
+
+  @media (max-width: $bootstrap-md) {
+    
+  }
+
+  @media (max-width: $bootstrap-lg) {
+    
   }
 }
-
-
 
 .footer {
   background-color: rgba(101,157,189, 0.65);
@@ -369,48 +470,5 @@ $bootstrap-xl: 1200px;
   }
 }
 
-.image-card {
-  width: 17vw !important;
-  height: 17vw !important;
-  object-fit: cover !important;
-  margin: 15px 15px;
 
-  &:hover {
-    cursor: pointer;
-  }
-}
 
-.works {
-  z-index: 1030;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
-
-  .carousel-control-prev-icon {
-    width:40px;
-    height:40px;
-    margin-right:2vw;
-  }
-
-  .carousel-control-next-icon {
-    width:40px;
-    height:40px;
-    margin-left:2vw;
-  }
-
-  .carousel-indicators li {
-    width: 15px;
-    height: 15px;
-    border-radius: 100%;
-  }
-  
-  img {
-  margin-top: 6vh;
-  height: 82vh ;
-  width: auto;
-  object-fit: cover;
-  }
-}
