--- a/src/App.scss
+++ b/src/App.scss
@@ -232,7 +232,7 @@ $bootstrap-xl: 1200px;
   p {
     font-family: 'Raleway', sans-serif;
     text-decoration:none; 
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight:700;
     color: white;
     text-align: justify;
@@ -245,7 +245,7 @@ $bootstrap-xl: 1200px;
       color:white;
       font-family: 'Raleway', sans-serif;
       text-decoration:none; 
-      font-size: 1rem;
+      font-size: 1.2rem;
 
       &:hover {
         opacity:0.6;
@@ -338,6 +338,8 @@ $bootstrap-xl: 1200px;
   }
 
   @media (min-width: 1400px) {
+    padding: 32px 10vw 76px;
+    
     p {
       font-size: 1.3rem;
     }
@@ -492,8 +494,39 @@ $bootstrap-xl: 1200px;
   color: white;
 }
 
+.tableOfContent {
+  margin: 2vh 0px;
+  a {
+    color:white;
+    font-size: 2rem;
 
+    &:hover {
+      opacity: 0.6;
+      text-decoration: none !important;
+    }
+  }
+}
 
+.table {
+  margin-top: -68px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 103vh;
+  background-attachment: fixed;
+  border-radius: 0px;
+  padding: 32px 5vw 76px;
+
+  h4 {
+    margin-top: 10vh;
+    margin-bottom: 7vh;
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: 'Playfair Display', serif;
+    color:white;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25)
+  }
+}
 
 
 
