Added book cover

--- a/src/App.scss
+++ b/src/App.scss
@@ -499,6 +499,7 @@ $bootstrap-xl: 1200px;
   a {
     color:white;
     font-size: 2rem;
+    font-weight: 400;
 
     &:hover {
       opacity: 0.6;
@@ -512,7 +513,6 @@ $bootstrap-xl: 1200px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 103vh;
   background-attachment: fixed;
   border-radius: 0px;
   padding: 32px 5vw 76px;
@@ -525,6 +525,10 @@ $bootstrap-xl: 1200px;
     font-family: 'Playfair Display', serif;
     color:white;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25)
+  }
+
+  img {
+    height: 70vh;
   }
 }
 
